[package]
authors = ["Paul Cowie <paul.cowie@ntlworld.com>"]
name = "ghimlink"
version = "0.2.0"
description = "Generates a Github-Flavoured-Markdown formatted image link to an image in the same repository."
license = "GPL-3.0-or-later"
exclude = [
    "res/*",
]
repository = "https://github.com/SCOTPAUL/ghimlink"

[dependencies]
clap = "2.33.3"
git2 = "0.13.12"
regex = "1.4.1"
text_io = "0.1.8"